Removed TypeAnimation cursor because of overlap bug

--- a/app/styles/AboutUsStyle.module.css
+++ b/app/styles/AboutUsStyle.module.css
@@ -105,7 +105,7 @@
 }
 
 .welcomeMessage{
-    @apply text-5xl font-bold text-stone-700 leading-relaxed mt-20
+    @apply text-5xl font-bold text-stone-700 leading-relaxed mt-20 z-10
 }
 
 .developerName{
